apps/web/src/components/ProductCard/product-card.module.scss
@import '_globals.scss';

.container {
    position: relative;
    flex: 1 auto;
    overflow: hidden;
    display: grid;
    grid-template-rows: 16rem 1fr 10rem;
    grid-template-areas: 'product-image' 'product-details' 'product-actions';
    gap: calc(var(--block-spacer-small) / 2);

    height: 100%;
    min-height: 37.5rem;
    width: 100%;
    min-width: var(--component-product-card-width);
    padding: calc(var(--block-padding) - var(--block-border-width));

    background-color: var(--product-card-color-background, var(--accent-secondary-light));
    color: var(--product-card-color-foreground, var(--accent-secondary-text));

    border-radius: var(--block-border-radius);
    box-shadow: 0 0 1rem -0.25rem rgba(0, 0, 0, 0.3);
    scroll-snap-align: center;

    contain-intrinsic-size: var(--component-product-card-width) 40rem;
    content-visibility: auto;

    &[data-available='false'] {
        opacity: 0.75;
        filter: brightness(0.85);

        background: var(--color-block);
        color: var(--color-dark);
    }

    .button {
        height: 4rem;
        width: 100%;
        box-shadow: none;
    }

    .image-container {
        overflow: hidden;
        position: relative;
        grid-area: product-image;

        height: 16rem;
        width: 100%;

        border-radius: var(--block-border-radius-small);
        -webkit-user-select: none;
        user-select: none;

        background-color: var(--product-card-color-image-background, var(--color-bright));
        //box-shadow: 0 0 1rem -0.5rem var(--color-block-shadow);

        .image {
            position: absolute;
            height: 100%;
            width: 100%;
            padding: var(--block-padding-small);

            object-fit: contain;
            object-position: center;

            transition: $animation-duration ease-in-out transform;

            @media (min-width: 950px) {
                padding: var(--block-padding-large);
            }
        }

        &:is(:hover, :active, :focus) .image {
            transform: scale(1.1);
        }
    }

    .details {
        grid-area: product-details;
        display: grid;
        grid-template-rows: auto 1fr;
        gap: var(--block-padding-large);
        width: 100%;
        margin-top: var(--block-spacer);
    }

    .header {
        display: flex;
        flex-direction: column;
        gap: 0.15rem;
        width: 100%;
        height: 100%;
        font-size: 2.25rem;
        line-height: 1.05;
        -webkit-hyphens: auto;
        hyphens: auto;

        @media (min-width: $breakpoint-mobile) {
            font-size: 2.15rem;
        }

        .title {
            font-size: inherit;
            font-weight: 650;
            -webkit-hyphens: auto;
            hyphens: auto;
        }

        .brand {
            font-weight: 500;
            font-size: 0.75em;
            line-height: 1;
            -webkit-hyphens: auto;
            hyphens: auto;
        }
    }

    .quantity-action {
        display: inline-grid;
        grid-template: 'previous-pricing quantity' 'pricing quantity';
        grid-template-columns: 8rem 1fr;
        justify-content: flex-end;
        align-items: flex-end;
        align-self: flex-end;
        gap: 0 var(--block-spacer);

        margin-top: var(--block-spacer-small);
        width: 100%;
    }

    .variants {
        display: inline-flex;
        align-items: flex-end;
        justify-content: flex-end;
        gap: var(--block-spacer-large);
        width: 100%;
        height: 100%;
        font-size: 1.75rem;

        @media (max-width: $breakpoint-mobile) {
            padding-bottom: var(--block-spacer-large);
        }

        .variant {
            -webkit-appearance: none;
            appearance: none;
            display: inline-block;

            font-weight: 500;
            font-size: 1.15em;
            line-height: 1;
            text-align: right;

            cursor: pointer;
            opacity: 0.95;
            transition: 150ms ease-in-out color;

            @media (min-width: $breakpoint-mobile) {
                font-size: 1em;
            }

            &[data-active='true'] {
                opacity: 1;
                color: var(--accent-primary);
                text-decoration: underline;
                text-decoration-thickness: 0.2rem;
            }
        }
    }

    .quantity {
        overflow: hidden;
        overflow: clip;
        grid-area: quantity;
        display: inline-grid;
        grid-template-columns: auto 1fr 3rem;
        grid-template-rows: 3.25rem;
        align-items: center;
        justify-content: center;
        justify-self: flex-end;
        flex-wrap: nowrap;

        height: 3.25rem;
        margin-bottom: 0;

        font-size: 1.25rem;
        line-height: 1.75rem;
        font-weight: 500;
        text-align: center;

        border-radius: var(--block-border-radius);
        border: none;
        background-color: var(--color-bright);

        transition:
            $animation-duration ease-in-out color,
            $animation-duration ease-in-out background-color,
            $animation-duration ease-in-out border-radius;
        -webkit-user-select: none;
        user-select: none;

        & > *:is([data-quantity-decrease], [data-quantity-increase]) {
            display: block;

            width: 3rem;
            height: 3.25rem;

            cursor: pointer;
            transition:
                $animation-duration ease-in-out color,
                $animation-duration ease-in-out background-color,
                $animation-duration ease-in-out border-radius,
                $animation-duration ease-in-out width;

            text-align: center;
            font-size: 1.85em;
            font-weight: 600;
            line-height: 1;

            // https://stackoverflow.com/a/30533339/3142553
            -webkit-transform: translateZ(0);
            transform: translateZ(0);

            &:not(:disabled, [data-disabled]):is(:hover) {
                background: var(--accent-secondary);
                color: var(--accent-secondary-text);
            }
            &:is(:active) {
                color: var(--accent-primary-dark);
                background: var(--accent-primary-text);
                border-color: var(--accent-primary);
            }
            &:is(:disabled, [data-disabled]) {
                background-color: transparent;
            }
        }

        [data-quantity-input] {
            -webkit-appearance: none;
            appearance: none;
            display: block;

            width: 2.8rem; // 1 char = 1.2rem. Then 1rem padding
            min-width: 1.25rem;
            height: 3.25rem;

            text-align: center;
            font-size: 1.85rem;
            line-height: 1;
            font-variant: common-ligatures tabular-nums slashed-zero;

            outline: none;

            &::-webkit-inner-spin-button,
            &::-webkit-outer-spin-button,
            &[type='number'] {
                -webkit-appearance: none;
                margin: 0;
            }
        }
    }

    .pricing {
        display: flex;
        flex-direction: column-reverse;
        justify-content: flex-start;
        align-items: flex-start;
        gap: 0;
        height: 100%;
        font-size: 0.75rem;
    }

    // Hover effect(s).
    &:not([data-available='false']) {
        .header:is(:hover, :active, :focus) {
            text-decoration: underline dotted 0.2rem var(--accent-primary);
            text-underline-offset: var(--block-border-width);
            text-underline-position: auto;
        }
    }

    &[data-skeleton],
    [data-skeleton] & {
        box-shadow: none;
        background-color: var(--color-block-dark);

        .image {
            box-shadow: none;
        }
    }
}

.actions {
    grid-area: product-actions;

    display: inline-grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 4rem;
    flex-direction: column;
    gap: var(--block-spacer);
    justify-content: flex-end;
    align-items: flex-end;

    height: 100%;
    width: 100%;
}

/* TODO: Move these into it's own component. */
.badges {
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    gap: var(--block-spacer-small);
    z-index: 1;
    pointer-events: none;

    position: absolute;
    inset: auto 0 0 auto;
}
.badge {
    flex-shrink: 1;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: calc(var(--block-spacer-small) / 2);
    padding: var(--block-padding-small) var(--block-padding) calc(var(--block-padding-small) * 1.25)
        var(--block-padding);

    background: var(--accent-primary-light);
    color: var(--accent-primary-text);

    border-top-left-radius: var(--block-border-radius);

    font-weight: 500;
    font-size: 1.25rem;
    line-height: normal;
    text-align: center;

    &[data-variant='discount'] {
        position: absolute;
        inset: var(--block-spacer-tiny) auto auto var(--block-spacer-tiny);
        display: flex;
        justify-content: center;
        align-items: center;
        z-index: 1;
        pointer-events: none;
        font-weight: 500;
        font-size: 1.15rem;
        line-height: 1;
        background: var(--color-sale);
        color: var(--color-bright);
        border-radius: var(--block-border-radius);
        box-shadow: 0 0 0.5rem 0 var(--color-block-shadow);

        b {
            font-weight: 700;
            font-size: 1.45rem;
            margin-right: var(--block-spacer-tiny);
        }
    }

    &[data-variant='new'] {
        background: var(--accent-primary-light);
        color: var(--accent-primary-text);
    }
    &[data-variant='vegan'] {
        background: rgba(var(--color-green-rgb), 0.9);
        color: var(--color-bright);
        text-shadow: 0 0 0.25rem var(--color-dark);
    }
}

